AUS-4311 removed commented out code; remove hardcoded S3 bucket references