@@ -3,11 +3,17 @@ package org.auscope.portal.server.config;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Map;
+import java.util.zip.CRC32;
+import java.util.zip.CheckedInputStream;
 
 import org.auscope.portal.core.view.knownlayer.KnownLayer;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
@@ -32,20 +38,23 @@ public class ProfilePortalProduction {
 
         return layer;
     }
+    
+    @Autowired private LayerChecksumService layerChecksumService;
 
+    @Value("${cloud.aws.portalS3Bucket}") private String portalS3Bucket;
+    
     @Bean
     public ArrayList<KnownLayer> knownTypes() {
         ArrayList<KnownLayer> knownLayers = new ArrayList<KnownLayer>();
 
         layersLoaded = true;
         Yaml yaml = new Yaml();
-        // InputStream inputStream =
-        // this.getClass().getClassLoader().getResourceAsStream("layers.yaml");
         URL yamlUrl;
         try {
-            yamlUrl = new URL("https://drdzuf3dxzz1h.cloudfront.net/layers.yaml");
-            try (InputStream inputStream = yamlUrl.openStream()) {
-                yamlLayers = yaml.load(inputStream);
+            yamlUrl = new URI(portalS3Bucket+"/layers.yaml").toURL();
+            try (InputStream yamlInputStream = yamlUrl.openStream()) {
+                CheckedInputStream checkedInputStream = new CheckedInputStream(yamlInputStream, new CRC32());
+                yamlLayers = yaml.load(checkedInputStream);
 
                 int[] counter = new int[1];
                 yamlLayers.forEach((k, v) -> {
@@ -58,13 +67,14 @@ public class ProfilePortalProduction {
                         knownLayers.add(knownType(id));
                 });
 
+                Long checksum = checkedInputStream.getChecksum().getValue();
+                layerChecksumService.setChecksum(checksum);
+                
             } catch (MalformedURLException e) {
-                // TODO Auto-generated catch block
-                e.printStackTrace();
+                System.err.println("[ProfilePortalProduction]knownTypes() Error malformed URL: " + e.getMessage());
             }
-        } catch (IOException e) {
-            System.err.println("Error reading from URL or processing stream: " + e.getMessage());
-            e.printStackTrace();
+        } catch (IOException | URISyntaxException e) {
+            System.err.println("[ProfilePortalProduction]knownTypes() Error reading from URL or processing stream: " + e.getMessage());
         }
 
         return knownLayers;
